--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
